# blynk-rele-esp32c2

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  alarma_main.c  blynk_rele_main.c
